--- a/index.html
+++ b/index.html
@@ -7,7 +7,21 @@
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Survey Question App</title>
+    <meta
+      property="og:title"
+      content="Survey Question - Irsal"
+      key="ogtitle"
+    />
+    <meta
+      property="og:description"
+      content="Survey Question - Irsal"
+      key="ogdesc"
+    />
+    <meta
+      name="description"
+      content="Survey Question - Irsal"
+    />
+    <title>Survey Question - Irsal</title>
   </head>
   <body>
     <div id="root"></div>
